Training benefits fix spacing

--- a/scss/_custom/admin/_training-benefits.scss
+++ b/scss/_custom/admin/_training-benefits.scss
@@ -23,7 +23,7 @@ $wtwu-color: #2088D1;
         @include adjust-font-size-to(36px, 1);
  
         line-height: 1.38em;
-        margin-bottom: 1em;
+        margin-bottom: 0.3em;
 
         @media #{$medium-up} {
             margin-top: -1em;
